syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "./";


service Reverse {
    rpc Do(Request) returns (Response) {}
}



message Request {

optional string Module = 1;
optional string Param = 2;
optional string ParamID = 3;
optional string Action = 4;
map<string, google.protobuf.Any> Args = 5;
optional string Path = 6;
optional string Token = 7;
optional string TokenType = 8;
optional int32 TimeStamp = 9;
optional string Language = 10;
optional string APIVersion = 11;
optional string Method = 12;
optional string UID = 13;
optional int32 IsAdmin = 14;
optional int32 SessionEnd = 15;
optional int32 Completed = 16;
optional int32 Readonly = 17;
optional FileData Files = 18;

}

message FileData {
optional string file_name = 1;
optional bytes chunk = 2;
optional uint32 file_size = 3;
}


message Response {

    map<string, google.protobuf.Any> Data = 1;
    optional Request RequestBack = 2;

}
